[project]
name = "ridehome"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.83.0",
    "beautifulsoup4>=4.14.3",
    "datasette>=0.65.2",
    "feedparser>=6.0.12",
    "html2text>=2025.4.15",
    "html5lib>=1.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
